@@ -5,9 +5,13 @@
    top/bottom.
 3. Add etching to checks, radios, slider grooves, and progressbars.
 4. Option to have progress fill groove - default to true.
-5. If using Gtk2 >= 2.12, then respect the 'Gtk style scrollviews'
+5. Dont do coloured mouse over for toolbar buttons.
+6. Better colored mouse over for checks and radios.
+7. If using Gtk2 >= 2.12, then respect the 'Gtk style scrollviews'
    setting.
-6. Respect KDE's shade sorted list column setting.
+8. Respect KDE's shade sorted list column setting.
+9. When checking if app is firefox, check against 'firefox' as
+   well as 'firefox-bin'
 
 0.58
 ----
